<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wardrobe">Wardrobe</string>
    <string name="title_profile">Profile</string>
    <string name="image">Image</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="any">Any</string>
    <string name="photo">Photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="add">Add</string>
    <string name="select_picture">Select Picture</string>
    <string name="remove">Remove</string>
    <string name="text_recommend">Your recommendation</string>
    <string name="send_verification_link">Send email verification link</string>
    <string name="category">Category</string>
    <string name="temperature">Temperature</string>
    <string name="clothing_advisor">Clothing Advisor</string>
    <string name="your_personal">YOUR PERSONAL</string>
</resources>