<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.group5.clothing_advisor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_wardrobe"
        android:name="com.group5.clothing_advisor.ui.wardrobe.WardrobeFragment"
        android:label="@string/title_wardrobe"
        tools:layout="@layout/fragment_wardrobe" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.group5.clothing_advisor.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>