<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.group5.clothing_advisor.ui.wardrobe.cloth_details.ClothDetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:contentDescription="@string/photo"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />
        <TextView
            android:id="@+id/category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/category"
            android:gravity="center_horizontal"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintTop_toBottomOf="@id/photo"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@{viewModel.selectedCloth.category}"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/category_title"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/temperature_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/temperature"
            android:gravity="center_horizontal"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@{viewModel.selectedCloth.temperature}"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/temperature_title"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Button
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/fab_margin_end"
            android:text="@string/remove"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>