<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.group5.clothing_advisor.ui.wardrobe.upload_cloth.UploadClothViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:contentDescription="@string/photo"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/photo" />

        <Button
            android:id="@+id/add"
            app:layout_constraintBottom_toTopOf="@id/upload_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isValid() ? View.VISIBLE:View.GONE}"
            android:text="@string/add"/>
        <Button
            android:id="@+id/upload_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/fab_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"/>

        <Spinner
            android:id="@+id/temperature_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories_spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>