<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.group5.clothing_advisor.ui.wardrobe.clothes_list.ClothesListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_view_padding"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_view_padding"
                    android:gravity="end"
                    android:text="@string/category"
                    android:textSize="@dimen/title_text_size" />

                <Spinner
                    android:id="@+id/categories_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_margin="@dimen/grid_view_padding" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/clothes_grid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:layout_margin="@dimen/grid_view_padding"
            app:clothesListData="@{viewModel.clothes}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/cloth_item" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:apiStatus="@{viewModel.clothesLoadingStatus}"
            android:contentDescription="@string/image" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add"
            android:layout_marginEnd="@dimen/fab_margin_end"
            android:layout_marginBottom="@dimen/fab_margin_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>